--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="navbar navbar-expand-lg fixed-top bg-transparent">
             <div class="container">
                 <a class="navbar-brand text-white d-flex" href="/">
-                    <img src="/assets/img/home/logo-03.svg" height="40" alt="Logo Socio Desenvolvedor">
+                    <img src="assets/img/home/logo-03.svg" height="40" alt="Logo Socio Desenvolvedor">
                     <span class="text-white align-self-center mt-1"> <b>Sócio Desenvolvedor</b></span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -293,7 +293,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 d-flex flex-column justify-content-center align-content-center">
-                        <img src="/assets/img/SELO.png" alt="garantia" class="img-fluid wow fadeInUp">
+                        <img src="assets/img/SELO.png" alt="garantia" class="img-fluid wow fadeInUp">
                         <h5 class="cor-roxa"><b><i class="fas fa-award"></i> Garantia do Sócio</b></h5>
                         <p>
                             Com a Sócio Desenvolvedor, ou você ganha com o seu novo projeto e
@@ -570,10 +570,10 @@
                 <div class="row align-items-center">
                     <div class="col-md-8 mx-auto">
                         <div class="owl-carousel owl-theme comprasegura-carousel ">
-                            <img src="/assets/img/atributos/01.png" class="img-fluid" alt="">
-                            <img src="/assets/img/atributos/02.png" class="img-fluid" alt="">
-                            <img src="/assets/img/atributos/03.png" class="img-fluid" alt="">
-                            <img src="/assets/img/atributos/05.png" class="img-fluid" alt="">
+                            <img src="assets/img/atributos/01.png" class="img-fluid" alt="">
+                            <img src="assets/img/atributos/02.png" class="img-fluid" alt="">
+                            <img src="assets/img/atributos/03.png" class="img-fluid" alt="">
+                            <img src="assets/img/atributos/05.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
